[Shashank] alignment fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -536,11 +536,11 @@
 
 @keyframes shimmer {
   0% {
-    transform: translateX(-100%);
+    background-position: 0% 50%;
   }
 
   100% {
-    transform: translateX(100%);
+    background-position: 100% 50%;
   }
 }
 
